--- a/sicp-1.ipynb
+++ b/sicp-1.ipynb
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "sqrt"
+       "sqrt-custom"
       ]
      },
      "execution_count": 1,
@@ -249,7 +249,7 @@
     "  (/ (+ x y) 2))\n",
     "(define (good-enough? guess x)\n",
     "  (< (abs (- (square guess) x)) 0.001))\n",
-    "(define (sqrt x)\n",
+    "(define (sqrt-custom x)\n",
     "  (sqrt-iter 1.0 x))"
    ]
   },
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "(sqrt 9)"
+    "(sqrt-custom 9)"
    ]
   },
   {
@@ -386,10 +386,454 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "; (sqrt-custom 1e100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loops because calcul precision is not sufficient to let the difference between `(square guess)` and `x` be small."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1e50"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt 1e100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ".03230844833048122"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt-custom 1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ".01"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt 1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sqrt-custom-two"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(define (sqrt-iter-two guess x)\n",
+    "    (if (good-enough-two? guess x)\n",
+    "        guess\n",
+    "        (sqrt-iter-two (improve guess x)\n",
+    "                   x)))\n",
+    "(define (improve guess x)\n",
+    "  (average guess (/ x guess)))\n",
+    "(define (average x y)\n",
+    "  (/ (+ x y) 2))\n",
+    "(define (good-enough-two? guess x)\n",
+    "  (< (abs (/ (- (improve guess x) guess) guess)) 0.01))\n",
+    "(define (sqrt-custom-two x)\n",
+    "  (sqrt-iter-two 1.0 x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0011258934122568e50"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt-custom-two 1e100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000714038711746e-2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sqrt-custom-two 1e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quite better than `sqrt-custom`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cuberoot"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(define (cuberoot-iter guess x)\n",
+    "  (if (good-enough? guess x)\n",
+    "      guess\n",
+    "      (cuberoot-iter (improve guess x)\n",
+    "                     x)))\n",
+    "(define (improve guess x)\n",
+    "  (/ (+ (/ x (* guess guess)) (* 2 guess)) 3))\n",
+    "(define (good-enough? guess x)\n",
+    "  (< (abs (/ (- (improve guess x) guess) guess)) 0.01))\n",
+    "(define (cuberoot x)\n",
+    "  (cuberoot-iter 1.0 x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".04002437951125682\n",
+      "168.25605160455595"
+     ]
+    }
+   ],
+   "source": [
+    "(define (cube x)\n",
+    "  (* x (* x x)))\n",
+    "(display (cuberoot (cube 0.04)))\n",
+    "(newline)\n",
+    "(display (cuberoot (cube 167)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1.9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First is recursive:\n",
+    "```\n",
+    "(+ 2 2)\n",
+    "(inc (+ 1 2))\n",
+    "(inc (inc (+ 0 2)))\n",
+    "(inc (inc 2))\n",
+    "(inc 3)\n",
+    "4\n",
+    "```\n",
+    "\n",
+    "Second is iterative:\n",
+    "```\n",
+    "(+ 2 2)\n",
+    "(+ 1 3)\n",
+    "(+ 0 4)\n",
+    "4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(define (A x y)\n",
+    "  (cond ((= y 0) 0)\n",
+    "        ((= x 0) ( * 2 y))\n",
+    "        ((= y 1) 2)\n",
+    "        (else (A (- x 1)\n",
+    "                 (A x (- y 1))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1024\n",
+      "65536\n",
+      "65536"
+     ]
+    }
+   ],
+   "source": [
+    "(display (A 1 10))\n",
+    "(newline)\n",
+    "(display (A 2 4))\n",
+    "(newline)\n",
+    "(display (A 3 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "h"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(define (f n) (A 0 n))\n",
+    "(define (g n) (A 1 n))\n",
+    "(define (h n) (A 2 n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`(f n)` computes $2n$  \n",
+    "`(g n)` computes $2^n$  \n",
+    "`(h n)` computes $2^{A(2,n-1)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1.11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25315"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(define (f n)\n",
+    "  (cond ((< n 3) n)\n",
+    "        (else (+ (+ (f (- n 1))\n",
+    "                    (* 2 (f (- n 2))))\n",
+    "                 (* 3 (f ( - n 3)))))))\n",
+    "(f 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25315"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(define (f n)\n",
+    "  (define (f-iter a b c k)\n",
+    "    (cond ((< k 3) a)\n",
+    "          (else (f-iter (+ (+ a\n",
+    "                        (* 2 b)\n",
+    "                     (* 3 c)))\n",
+    "                  a b (- k 1)))))\n",
+    "  (cond ((< n 0) n)\n",
+    "        (else (f-iter 2 1 0 n))))\n",
+    "(f 13)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second definition is noticeably faster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1.12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pascal"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(define (pascal n k)\n",
+    "  (cond ((< n 0) 0)\n",
+    "        ((> k n) 0)\n",
+    "        ((< k 0) 0)\n",
+    "        ((= n 0) 1)\n",
+    "        ((= k 0) 1)\n",
+    "        (else (+ (pascal (- n 1) k) (pascal (- n 1) (- k 1))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(pascal 4 2)"
+   ]
   }
  ],
  "metadata": {
